logs/Slang/generated/keywords/5.6.2--keyword_until.sv.log
name: until
description: The 'until' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_until.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_until.sv:8:8: error: expected declarator
    bit until;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_until.sv:8:9: error: expected member
    bit until;
        ^~~~~
